# SeekerAIStudio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_SHADCN.md  agents.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: README.md  i18n-guidelines.md
docs/design/: AIGC_Audio_UI.md  AIGC_Comic_UI.md  AIGC_Novel_UI.md  AIGC_Video_UI.md  UIUX.md
docs/features/: FEATURE_TOGGLE.md
docs/product/: AIGC_Audio_Generation.md  AIGC_Comic_Generation.md  AIGC_Game_Generation.md  AIGC_Novel_Generation.md  AIGC_Video_Generation.md  PRD.md
docs/roadmap/: Roadmap.md
docs/technical/: AIGC_Audio_Architecture.md  AIGC_Comic_Architecture.md  AIGC_Game_Architecture.md  AIGC_Novel_Architecture.md  AIGC_Video_Architecture.md  API_Reference.md  Architecture.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/ai_base/: Cargo.toml
src-tauri/ai_base/src/: gguf.rs  lib.rs  models.rs  vision.rs
src-tauri/ai_base/src/models/qwen3vl/: config.rs  inference.rs  mod.rs  model.rs  processor.rs
src-tauri/ai_base/src/utils/: img_utils.rs  mod.rs  rope.rs  tensor_utils.rs
src-tauri/icons/: icon.icns
src-tauri/src/: inference.rs  lib.rs  main.rs
src-tauri/src/commands/: api.rs  common.rs  gguf.rs  logging.rs  mod.rs  models.rs  qwen3vl.rs  storage.rs
src/components/: AIChatPage.tsx  ChatHistoryList.tsx  ChatHomePage.tsx  ChatSessionPage.tsx  InferencePanel.tsx  Markdown.tsx  ModelManagementPage.tsx  OllamaManager.tsx  SeekerSwitch.tsx  SettingsDialog.tsx  SettingsPage.tsx  Sidebar.tsx  WorkflowEditorPage.tsx  WorkflowListPage.tsx  WorkflowPage.tsx  WorkflowPropertyPanel.tsx
src/components/ai-elements/: ChatMessage.tsx  README.md  StreamingText.tsx  artifact.tsx  canvas.tsx  chain-of-thought.tsx  chat.tsx  checkpoint.tsx  code-block.tsx  confirmation.tsx  connection.tsx  context.tsx  controls.tsx  conversation.tsx  edge.tsx  image.tsx  index.ts  inline-citation.tsx  loader.tsx  message.tsx  model-selector.tsx  node.tsx  open-in-chat.tsx  panel.tsx  plan.tsx  prompt-input.tsx  queue.tsx  reasoning.tsx  shimmer.tsx  sources.tsx  suggestion.tsx  task.tsx  tool.tsx  toolbar.tsx  web-preview.tsx
src/components/nodes/: AgentNode.tsx  ConditionNode.tsx  DelayNode.tsx  ImageGenNode.tsx  InputNode.tsx  OutputNode.tsx  RequestNode.tsx  ScriptNode.tsx  TaskNode.tsx  TriggerNode.tsx
src/components/ui/: breadcrumbs.tsx  button-group.tsx  button.tsx  (+21 more)
src/lib/: cva.ts  features.ts  i18n.ts  theme.ts
src/pages/: EnhancedChatPage.tsx
src/routes/: chat.tsx  index.tsx  inference.tsx  models.tsx  settings.tsx  workflow.tsx
(+46 files in other folders)
