[package]
name = "seekeraitools"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "seekeraitools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# aha = { version = "0.1.5", features = ["cuda"] }
axum = { version = "^0.8.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
candle-core = { version = "0.9.2-alpha.2"}
candle-nn = { version = "0.9.2-alpha.2"}
candle-transformers = { version = "0.9.2-alpha.2"}
candle-flash-attn = { version = "0.9.2-alpha.2", optional = true }
anyhow = "1.0.100"
ffmpeg-next = { version = "8.0.0", optional = true }
image = "0.25.8"
reqwest = { version = "0.12.23", features = ["blocking", "stream", "json"] }
urlencoding = "2.1"
futures-util = "0.3"
base64 = "0.22.1"
num = "0.4.3"
tokenizers = "0.22.1"
# aha_openai_dive = {version = "1.3.2", features = ["stream"] }
uuid = { version = "1.18.1", features = ["v4"] }
chrono = "0.4.42"
rocket = { version = "0.5.1", features = ["serde_json", "json"] }
hound = "3.5.1"
clap = { version = "4.5.51", features = ["derive"] }
# modelscope = "0.1.0"
dirs = "6.0.0"
url = "2.5.7"
ai_base = {path = "./ai_base"}
tauri-plugin-dialog = "2"

[features]
flash-attn= ["candle-flash-attn"]
cuda= ["candle-nn/cuda", "candle-core/cuda", "candle-transformers/cuda"]
ffmpeg= ["ffmpeg-next"]

[lints.clippy]
needless_range_loop = "allow"
single_range_in_vec_init = "allow"
